--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       }
 
       let rockImage = new Image();
-      rockImage.src = "/icons/rock.png"; // Replace with the URL of your rock image
+      rockImage.src = "https://i.imgur.com/eFxVRgX.png"; // Replace with the URL of your rock image
 
       let paperImage = new Image();
-      paperImage.src = "/icons/paper.png"; // Replace with the URL of your paper image
+      paperImage.src = "https://i.imgur.com/ocQ6qCw.png"; // Replace with the URL of your paper image
 
       let scissorsImage = new Image();
-      scissorsImage.src = "/icons/scissors.png"; // Replace with the URL of your scissors image
+      scissorsImage.src = "https://i.imgur.com/gFIasFb.png"; // Replace with the URL of your scissors image
 
       window.onload = function () {
         let num = window.prompt(
